syntax = "proto3";

package auth;

service AuthService {
  rpc GetUserById(GetUserRequest) returns (UserResponse);
  rpc GetUserByEmail(GetUserByEmailRequest) returns (UserResponse);
  rpc GetOnlineCustomerSupporters(Empty) returns (OnlineUsersResponse);
  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);
  rpc GetDashboardStatistics(Empty) returns (DashboardStatisticsResponse);
}

message GetUserRequest {
  string id = 1;
  string token = 2;
}

message GetUserByEmailRequest {
  string email = 1;
  string token = 2;
}

message UserResponse {
  User user = 1;
  bool success = 2;
  string message = 3;
}

message OnlineUsersResponse {
  repeated User users = 1;
  bool success = 2;
  string message = 3;
}

message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenResponse {
  bool valid = 1;
  string userId = 2;
  string message = 3;
}

message User {
  string id = 1;
  string email = 2;
  string name = 3;
  string firstName = 4;
  string lastName = 5;
  string phone = 6;
  Role role = 7;
  bool isOnline = 8;
  string lastSeen = 9;
  string languagePreference = 10;
  repeated string categoryIds = 11;
}

message Role {
  string id = 1;
  string name = 2;
  string description = 3;
}

message DashboardStatisticsResponse {
  DashboardStatistics data = 1;
  bool success = 2;
  string message = 3;
}

message DashboardStatistics {
  UserStatistics users = 1;
}

message UserStatistics {
  int32 total = 1;
  repeated RoleStatistics roles = 2;
  int32 blockedUsers = 3;
  int32 verifiedUsers = 4;
}

message RoleStatistics {
  string roleName = 1;
  int32 count = 2;
}

message Empty {} 